--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "redux-persist": "^6.0.0",
+    "uuid": "^11.1.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
